--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8b0a483
-	base = 1f8386c
-	trim = 
-	trimbase = 
+	base = d1aec67
+	trim = generate_parameter_library_py
+	trimbase = 1f8386c
