--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/generate_parameter_library
-	previous = 
-	base = b9d4d4a
+	previous = b9d4d4a
+	base = 6b88518
 	trim = 
 	trimbase = 
