--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/generate_parameter_library
-	previous = 
-	base = 826e0b6
+	previous = 826e0b6
+	base = 0a53535
 	trim = 
 	trimbase = 
