--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/generate_parameter_library_py
-	previous = 
-	base = d1aec67
+	previous = d1aec67
+	base = 418a17f
 	trim = 
 	trimbase = 
