--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/generate_parameter_library_py
-	previous = 
-	base = 57ed6e1
+	previous = 57ed6e1
+	base = 48546dc
 	trim = 
 	trimbase = 
