--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/generate_parameter_library_example
-	previous = 
-	base = 916caa1
+	previous = 916caa1
+	base = b7f28d6
 	trim = 
 	trimbase = 
