--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/generate_parameter_library_example
-	previous = 
-	base = a8e075d
+	previous = a8e075d
+	base = 034c6e8
 	trim = 
 	trimbase = 
