--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/generate_parameter_library
-	previous = 
-	base = 20014b7
+	previous = 20014b7
+	base = 43aabc4
 	trim = 
 	trimbase = 
