--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/generate_parameter_library_py
-	previous = 
-	base = 71c6680
+	previous = 71c6680
+	base = c118343
 	trim = 
 	trimbase = 
