--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/generate_parameter_library_example
-	previous = 
-	base = f5cf3d5
+	previous = f5cf3d5
+	base = 3fec8e0
 	trim = 
 	trimbase = 
