--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 514dd0c
-	base = b690a9f
-	trim = 
-	trimbase = 
+	base = 02b094e
+	trim = tcb_span
+	trimbase = b690a9f
