--- a/package.xml
+++ b/package.xml
@@ -2,19 +2,21 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>generate_parameter_library</name>
-  <version>0.1.0</version>
+  <version>0.2.0</version>
   <description>CMake to generate ROS parameter library.</description>
   <maintainer email="paul.gesel@picknik.ai">Paul Gesel</maintainer>
   <license>BSD-3-Clause</license>
   <author email="paul.gesel@picknik.ai">Paul Gesel</author>
 
-  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
   <exec_depend>generate_parameter_library_py</exec_depend>
 
+  <depend>fmt</depend>
+  <depend>parameter_traits</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_lifecycle</depend>
-  <depend>fmt</depend>
+  <depend>tcb_span</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
