--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/tcb_span
-	previous = 
-	base = 02b094e
+	previous = 02b094e
+	base = 9eacefb
 	trim = 
 	trimbase = 
