--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/tcb_span
-	previous = 
-	base = 3a133ea
+	previous = 3a133ea
+	base = 8e9e47b
 	trim = 
 	trimbase = 
