--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/tcb_span
-	previous = 
-	base = 2f01efb
+	previous = 2f01efb
+	base = 03c30ce
 	trim = 
 	trimbase = 
