--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 514dd0c
-	base = df0a801
+	base = ccb546e
 	trim = generate_parameter_library_py
-	trimbase = 
+	trimbase = df0a801
