--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 514dd0c
-	base = 22cf972
-	trim = 
-	trimbase = 
+	base = 54858dc
+	trim = tcb_span
+	trimbase = 22cf972
