--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 514dd0c
-	base = 2d7fb04
+	base = 9474422
 	trim = generate_parameter_library
-	trimbase = 
+	trimbase = 2d7fb04
