--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 514dd0c
-	base = fe6f3ee
+	base = 41798e0
 	trim = example
-	trimbase = 
+	trimbase = fe6f3ee
