--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/tcb_span
-	previous = 
-	base = 54858dc
+	previous = 54858dc
+	base = 1e16e5d
 	trim = 
 	trimbase = 
