--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/tcb_span
-	previous = 
-	base = ff78293
+	previous = ff78293
+	base = c189136
 	trim = 
 	trimbase = 
