--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/parameter_traits
-	previous = 
-	base = 0549303
+	previous = 0549303
+	base = 9ade77f
 	trim = 
 	trimbase = 
