--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/parameter_traits
-	previous = 
-	base = f4ebf3e
+	previous = f4ebf3e
+	base = 1718fee
 	trim = 
 	trimbase = 
