--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/parameter_traits
-	previous = 
-	base = 824a334
+	previous = 824a334
+	base = 8e26f1e
 	trim = 
 	trimbase = 
