--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/tcb_span
-	previous = 
-	base = 87fe63a
+	previous = 87fe63a
+	base = 40cca16
 	trim = 
 	trimbase = 
