--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0418287
-	base = c5057e2
+	base = e6903f5
 	trim = generate_parameter_library_py
-	trimbase = 
+	trimbase = c5057e2
