--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0418287
-	base = 2203812
+	base = 4d90472
 	trim = tcb_span
-	trimbase = 
+	trimbase = 2203812
