--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0418287
-	base = 2a2be75
+	base = 312c837
 	trim = generate_parameter_library
-	trimbase = 
+	trimbase = 2a2be75
