--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0418287
-	base = cf71394
+	base = 7b8ebd0
 	trim = parameter_traits
-	trimbase = 
+	trimbase = cf71394
