--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0418287
-	base = 45297d9
+	base = cb86d72
 	trim = example
-	trimbase = 
+	trimbase = 45297d9
