--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 0418287
-	base = cc92b8c
+	base = e42ece1
 	trim = tcb_span
-	trimbase = 
+	trimbase = cc92b8c
