--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a1b62c6
-	base = 0a437cd
+	base = d192ff7
 	trim = tcb_span
-	trimbase = 
+	trimbase = 0a437cd
