--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a1b62c6
-	base = 785026a
+	base = 3b0a73f
 	trim = parameter_traits
-	trimbase = 
+	trimbase = 785026a
