--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a1b62c6
-	base = 5e66b03
+	base = 7521146
 	trim = generate_parameter_library
-	trimbase = 
+	trimbase = 5e66b03
