--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a1b62c6
-	base = 6b620d4
+	base = 56e86ce
 	trim = generate_parameter_library_py
-	trimbase = 
+	trimbase = 6b620d4
