--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a1b62c6
-	base = ace65ee
+	base = a9924cf
 	trim = example
-	trimbase = 
+	trimbase = ace65ee
