--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a1b62c6
-	base = abd3617
+	base = 55de442
 	trim = tcb_span
-	trimbase = 
+	trimbase = abd3617
