--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.2.1": ["Paul Gesel", "paul.gesel@picknik.ai"], "0.2.0": ["Paul Gesel", "paul.gesel@picknik.ai"], "0.1.0": ["Paul Gesel", "paul.gesel@picknik.ai"]}
+{"0.2.2": ["Paul Gesel", "paul.gesel@picknik.ai"], "0.2.1": ["Paul Gesel", "paul.gesel@picknik.ai"], "0.2.0": ["Paul Gesel", "paul.gesel@picknik.ai"], "0.1.0": ["Paul Gesel", "paul.gesel@picknik.ai"]}
