--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a1b62c6
-	base = 2df56ea
+	base = 29ec101
 	trim = tcb_span
-	trimbase = 
+	trimbase = 2df56ea
