--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b7ca1a0
-	base = b08ae84
+	base = 69d0d9e
 	trim = tcb_span
-	trimbase = 
+	trimbase = b08ae84
