--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b7ca1a0
-	base = 98902dc
+	base = f9307f8
 	trim = tcb_span
-	trimbase = 
+	trimbase = 98902dc
