--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b7ca1a0
-	base = 7c9f81a
+	base = 7320f9c
 	trim = generate_parameter_library_py
-	trimbase = 
+	trimbase = 7c9f81a
