--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b7ca1a0
-	base = 2b10d3e
+	base = 3f5ed26
 	trim = parameter_traits
-	trimbase = 
+	trimbase = 2b10d3e
