--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b7ca1a0
-	base = c65f847
+	base = e741569
 	trim = tcb_span
-	trimbase = 
+	trimbase = c65f847
