--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b7ca1a0
-	base = ffc8040
+	base = 6629f94
 	trim = generate_parameter_library
-	trimbase = 
+	trimbase = ffc8040
