--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b7ca1a0
-	base = 4a48776
+	base = e500784
 	trim = example
-	trimbase = 
+	trimbase = 4a48776
