--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 33d1110
-	base = e02bc12
+	base = 6a4a60d
 	trim = generate_parameter_library
-	trimbase = 
+	trimbase = e02bc12
