--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 33d1110
-	base = 2bdf9c6
+	base = 866df18
 	trim = generate_parameter_library_py
-	trimbase = 
+	trimbase = 2bdf9c6
