--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 33d1110
-	base = 234a3a8
+	base = bf490b1
 	trim = parameter_traits
-	trimbase = 
+	trimbase = 234a3a8
