--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 33d1110
-	base = fd622e0
+	base = b3c3ede
 	trim = tcb_span
-	trimbase = 
+	trimbase = fd622e0
