--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 33d1110
-	base = 6f985aa
+	base = dcec1c2
 	trim = example
-	trimbase = 
+	trimbase = 6f985aa
