--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 33d1110
-	base = 6ca7d5d
+	base = c060546
 	trim = tcb_span
-	trimbase = 
+	trimbase = 6ca7d5d
