--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2ed5501
-	base = da3d665
+	base = abd350d
 	trim = generate_parameter_library_py
-	trimbase = 
+	trimbase = da3d665
