--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2ed5501
-	base = 5424a08
+	base = 41ac8a3
 	trim = parameter_traits
-	trimbase = 
+	trimbase = 5424a08
