--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2ed5501
-	base = ba67636
+	base = 53a1507
 	trim = example
-	trimbase = 
+	trimbase = ba67636
