--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2ed5501
-	base = f782a33
+	base = 20c2774
 	trim = generate_parameter_library
-	trimbase = 
+	trimbase = f782a33
