--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/generate_parameter_library_example
-	previous = 
-	base = 53a1507
+	previous = 53a1507
+	base = a89a2c5
 	trim = 
 	trimbase = 
