--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/generate_parameter_library_example
-	previous = 
-	base = 28a9118
+	previous = 28a9118
+	base = d2078d8
 	trim = 
 	trimbase = 
