--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/generate_parameter_library
-	previous = 
-	base = 20c2774
+	previous = 20c2774
+	base = f9cdd6c
 	trim = 
 	trimbase = 
