--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/generate_parameter_library
-	previous = 
-	base = b2f8da6
+	previous = b2f8da6
+	base = 254b517
 	trim = 
 	trimbase = 
