--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/generate_parameter_library_py
-	previous = 
-	base = abd350d
+	previous = abd350d
+	base = 2641401
 	trim = 
 	trimbase = 
