--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/generate_parameter_library_py
-	previous = 
-	base = 6ed1a3e
+	previous = 6ed1a3e
+	base = 08bc824
 	trim = 
 	trimbase = 
