--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/parameter_traits
-	previous = 
-	base = 41ac8a3
+	previous = 41ac8a3
+	base = 50e10f7
 	trim = 
 	trimbase = 
