--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/parameter_traits
-	previous = 
-	base = b91c705
+	previous = b91c705
+	base = 48e1f59
 	trim = 
 	trimbase = 
