--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/parameter_traits
-	previous = 
-	base = 6f39fd0
+	previous = 6f39fd0
+	base = 75f4137
 	trim = 
 	trimbase = 
