--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/generate_parameter_library_py
-	previous = 
-	base = 90130f0
+	previous = 90130f0
+	base = f3c0fc9
 	trim = 
 	trimbase = 
