--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/generate_parameter_library
-	previous = 
-	base = 31a4360
+	previous = 31a4360
+	base = 2865f26
 	trim = 
 	trimbase = 
