--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/generate_parameter_library_example
-	previous = 
-	base = 94ecefd
+	previous = 94ecefd
+	base = 2a688fd
 	trim = 
 	trimbase = 
