--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2ed5501
-	base = c48344c
+	base = 5332b17
 	trim = generate_parameter_library_py
-	trimbase = 
+	trimbase = c48344c
