--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2ed5501
-	base = df063bd
+	base = 0597d3c
 	trim = example
-	trimbase = 
+	trimbase = df063bd
