--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2ed5501
-	base = 8655b19
+	base = 9d94936
 	trim = generate_parameter_library
-	trimbase = 
+	trimbase = 8655b19
