--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2ed5501
-	base = 439f9c8
+	base = 5286c28
 	trim = parameter_traits
-	trimbase = 
+	trimbase = 439f9c8
