--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.2.5-1": ["Tue Sep 20 2022", "Paul Gesel", "paul.gesel@picknik.ai"]}
+{"0.2.5-2": ["Tue Sep 27 2022", "Paul Gesel", "paul.gesel@picknik.ai"], "0.2.5-1": ["Tue Sep 20 2022", "Paul Gesel", "paul.gesel@picknik.ai"]}
