--- a/parameter_traits/package.xml
+++ b/parameter_traits/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>parameter_traits</name>
-  <version>0.2.5</version>
+  <version>0.2.6</version>
   <description>Functions and types for rclcpp::Parameter</description>
   <maintainer email="maybe@tylerjw.dev">Tyler Weaver</maintainer>
   <maintainer email="paul.gesel@picknik.ai">Paul Gesel</maintainer>
@@ -12,6 +12,7 @@
 
   <depend>fmt</depend>
   <depend>rclcpp</depend>
+  <depend>tcb_span</depend>
 
   <test_depend>ament_cmake_gtest</test_depend>
   <test_depend>ament_lint_auto</test_depend>
