--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 39f9a43
-	base = dd94a98
+	base = 86d154c
 	trim = generate_parameter_library_py
-	trimbase = 
+	trimbase = dd94a98
