--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 39f9a43
-	base = 804214d
+	base = 4d81e50
 	trim = generate_parameter_library
-	trimbase = 
+	trimbase = 804214d
