--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 39f9a43
-	base = 67bb2de
+	base = 8557033
 	trim = example
-	trimbase = 
+	trimbase = 67bb2de
