--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 39f9a43
-	base = 8b2d114
+	base = 62473a7
 	trim = parameter_traits
-	trimbase = 
+	trimbase = 8b2d114
