--- a/package.xml
+++ b/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>generate_parameter_library</name>
-  <version>0.2.5</version>
+  <version>0.2.6</version>
   <description>CMake to generate ROS parameter library.</description>
   <maintainer email="paul.gesel@picknik.ai">Paul Gesel</maintainer>
   <license>BSD-3-Clause</license>
@@ -10,9 +10,8 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <exec_depend>generate_parameter_library_py</exec_depend>
-
   <depend>fmt</depend>
+  <depend>generate_parameter_library_py</depend>
   <depend>parameter_traits</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_lifecycle</depend>
