--- a/generate_parameter_library/package.xml
+++ b/generate_parameter_library/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>generate_parameter_library</name>
-  <version>0.2.6</version>
+  <version>0.2.7</version>
   <description>CMake to generate ROS parameter library.</description>
   <maintainer email="paul.gesel@picknik.ai">Paul Gesel</maintainer>
   <license>BSD-3-Clause</license>
@@ -10,8 +10,9 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <buildtool_export_depend>generate_parameter_library_py</buildtool_export_depend>
+
   <depend>fmt</depend>
-  <depend>generate_parameter_library_py</depend>
   <depend>parameter_traits</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_lifecycle</depend>
