--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1a8f0e7
-	base = d2c9444
+	base = d9d662b
 	trim = generate_parameter_library_py
-	trimbase = 
+	trimbase = d2c9444
