--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1a8f0e7
-	base = 2c9f48e
+	base = 5f7fbcc
 	trim = generate_parameter_library
-	trimbase = 
+	trimbase = 2c9f48e
