--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1a8f0e7
-	base = 0199fdb
+	base = 710565b
 	trim = parameter_traits
-	trimbase = 
+	trimbase = 0199fdb
