--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1a8f0e7
-	base = 5b6297c
+	base = 63dc325
 	trim = example
-	trimbase = 
+	trimbase = 5b6297c
