--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b71493a
-	base = a2c6567
+	base = 9520e5e
 	trim = generate_parameter_library_py
-	trimbase = 
+	trimbase = a2c6567
