--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b71493a
-	base = 8c76a79
+	base = 6b8cd2f
 	trim = generate_parameter_library
-	trimbase = 
+	trimbase = 8c76a79
