--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b71493a
-	base = c43496a
+	base = adafafd
 	trim = example
-	trimbase = 
+	trimbase = c43496a
