--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b71493a
-	base = 244dc43
+	base = e972036
 	trim = parameter_traits
-	trimbase = 
+	trimbase = 244dc43
