--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 75f0582
-	base = c4d75c6
+	base = b11622f
 	trim = example
-	trimbase = 
+	trimbase = c4d75c6
