--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 75f0582
-	base = 6806376
+	base = 12a8ffd
 	trim = generate_parameter_library
-	trimbase = 
+	trimbase = 6806376
