--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 75f0582
-	base = b20d457
+	base = 5f22f6a
 	trim = generate_parameter_library_py
-	trimbase = 
+	trimbase = b20d457
