--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 75f0582
-	base = b37ed3e
+	base = c1c5348
 	trim = parameter_traits
-	trimbase = 
+	trimbase = b37ed3e
