--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b5a1d70
-	base = 78256dd
+	base = 2b47eb3
 	trim = example
-	trimbase = 
+	trimbase = 78256dd
