--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b5a1d70
-	base = ca6ac24
+	base = 3e1fb86
 	trim = generate_parameter_library
-	trimbase = 
+	trimbase = ca6ac24
