--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b5a1d70
-	base = 02ac2df
+	base = 3d4dc4c
 	trim = parameter_traits
-	trimbase = 
+	trimbase = 02ac2df
