--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b5a1d70
-	base = 050f356
+	base = d63affc
 	trim = generate_parameter_library_py
-	trimbase = 
+	trimbase = 050f356
