--- a/tracks.yaml
+++ b/tracks.yaml
@@ -50,5 +50,4 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/PickNikRobotics/generate_parameter_library.git
-    version: 0.3.1
-    version_saved: :{auto}
+    version: :{auto}
