--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5cfacfe
-	base = 468a0f3
-	trim = 
-	trimbase = 
+	base = 8ba2c7f
+	trim = parameter_traits
+	trimbase = 468a0f3
