--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5cfacfe
-	base = aef4539
-	trim = 
-	trimbase = 
+	base = 9a8bcd5
+	trim = generate_parameter_library_py
+	trimbase = aef4539
