--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5cfacfe
-	base = 923ddfd
-	trim = 
-	trimbase = 
+	base = 28a82e2
+	trim = generate_parameter_library
+	trimbase = 923ddfd
