--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5cfacfe
-	base = 923ddfd
-	trim = 
-	trimbase = 
+	base = 1de9bbb
+	trim = example
+	trimbase = 923ddfd
