--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/generate_parameter_library
-	previous = 
-	base = 5a99c6d
+	previous = 5a99c6d
+	base = 5c36aaf
 	trim = 
 	trimbase = 
