--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/generate_parameter_library_py
-	previous = 
-	base = 4d32acd
+	previous = 4d32acd
+	base = 7d50372
 	trim = 
 	trimbase = 
