--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/parameter_traits
-	previous = 
-	base = 8ba2c7f
+	previous = 8ba2c7f
+	base = eeebbf5
 	trim = 
 	trimbase = 
