--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/parameter_traits
-	previous = 
-	base = 905340f
+	previous = 905340f
+	base = 6996ed4
 	trim = 
 	trimbase = 
