--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/generate_parameter_library_example
-	previous = 
-	base = 692d463
+	previous = 692d463
+	base = 1e4a786
 	trim = 
 	trimbase = 
