--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/parameter_traits
-	previous = 
-	base = 48494cf
+	previous = 48494cf
+	base = 870938e
 	trim = 
 	trimbase = 
