--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/generate_parameter_library_example
-	previous = 
-	base = f8e27ce
+	previous = f8e27ce
+	base = 9450561
 	trim = 
 	trimbase = 
