--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/generate_parameter_library
-	previous = 
-	base = 5f70a24
+	previous = 5f70a24
+	base = 8b5f2ce
 	trim = 
 	trimbase = 
