--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/generate_parameter_library_py
-	previous = 
-	base = 1341a75
+	previous = 1341a75
+	base = df73a9f
 	trim = 
 	trimbase = 
