--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/parameter_traits
-	previous = 
-	base = 8cfce0b
+	previous = 8cfce0b
+	base = b3dbc42
 	trim = 
 	trimbase = 
