--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/generate_parameter_library
-	previous = 
-	base = 28a82e2
+	previous = 28a82e2
+	base = b2ebc13
 	trim = 
 	trimbase = 
