--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/generate_parameter_library
-	previous = 
-	base = 8c2725a
+	previous = 8c2725a
+	base = 7d3f936
 	trim = 
 	trimbase = 
