--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/generate_parameter_library_example
-	previous = 
-	base = 1de9bbb
+	previous = 1de9bbb
+	base = 92bb2be
 	trim = 
 	trimbase = 
