--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/generate_parameter_library_example
-	previous = 
-	base = b601954
+	previous = b601954
+	base = d11e4cc
 	trim = 
 	trimbase = 
