--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/generate_parameter_library_py
-	previous = 
-	base = 9a8bcd5
+	previous = 9a8bcd5
+	base = 3a422bc
 	trim = 
 	trimbase = 
