--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/generate_parameter_library_py
-	previous = 
-	base = 28d1723
+	previous = 28d1723
+	base = 35c48c8
 	trim = 
 	trimbase = 
