--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 28e5278
-	base = 932b21c
+	base = 687589c
 	trim = example
-	trimbase = 
+	trimbase = 932b21c
