--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 28e5278
-	base = 1786002
+	base = c639891
 	trim = generate_parameter_library_py
-	trimbase = 
+	trimbase = 1786002
