--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 28e5278
-	base = d26e0c6
+	base = 69b8ce1
 	trim = generate_parameter_library
-	trimbase = 
+	trimbase = d26e0c6
