--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 28e5278
-	base = 9546b90
+	base = 87c2b3f
 	trim = parameter_traits
-	trimbase = 
+	trimbase = 9546b90
