--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.3.1-3": ["Tue Mar 21 2023", "Tyler Weaver", "maybe@tylerjw.dev"]}
+{"0.3.2-1": ["Wed Apr 12 2023", "Tyler Weaver", "maybe@tylerjw.dev"], "0.3.1-3": ["Tue Mar 21 2023", "Tyler Weaver", "maybe@tylerjw.dev"]}
