--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 28e5278
-	base = dccbc18
+	base = 0fbab6c
 	trim = generate_parameter_library_py
-	trimbase = 
+	trimbase = dccbc18
