--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 28e5278
-	base = ac6a8ca
+	base = ba6aad8
 	trim = example
-	trimbase = 
+	trimbase = ac6a8ca
