--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 28e5278
-	base = da8dc02
+	base = 8d7f596
 	trim = parameter_traits
-	trimbase = 
+	trimbase = da8dc02
