--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 28e5278
-	base = 7deacc9
+	base = ac78d6b
 	trim = generate_parameter_library
-	trimbase = 
+	trimbase = 7deacc9
