--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3859b5a
-	base = e960242
+	base = dae8d19
 	trim = generate_parameter_library_py
-	trimbase = 
+	trimbase = e960242
