--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3859b5a
-	base = 646aacd
+	base = a58bd7e
 	trim = generate_parameter_library
-	trimbase = 
+	trimbase = 646aacd
