--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3859b5a
-	base = c8c73c5
+	base = 10eaae5
 	trim = example
-	trimbase = 
+	trimbase = c8c73c5
