--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3859b5a
-	base = 8c8513c
+	base = 3ed4003
 	trim = parameter_traits
-	trimbase = 
+	trimbase = 8c8513c
