--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3859b5a
-	base = 71f30ed
+	base = 027189c
 	trim = generate_parameter_library_py
-	trimbase = 
+	trimbase = 71f30ed
