--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3859b5a
-	base = e8b62ab
+	base = 0201fed
 	trim = example
-	trimbase = 
+	trimbase = e8b62ab
