--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3859b5a
-	base = fe88a99
+	base = db3c586
 	trim = parameter_traits
-	trimbase = 
+	trimbase = fe88a99
