--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3859b5a
-	base = 7563c1e
+	base = 14cab9f
 	trim = generate_parameter_library
-	trimbase = 
+	trimbase = 7563c1e
