Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.3.2-1": ["Wed Apr 12 2023", "Paul Gesel", "paul.gesel@picknik.ai"], "0.3.1-3": ["Tue Mar 21 2023", "Paul Gesel", "paul.gesel@picknik.ai"]}
+{"0.3.3-1": ["Thu Apr 13 2023", "Paul Gesel", "paul.gesel@picknik.ai"], "0.3.2-1": ["Wed Apr 12 2023", "Paul Gesel", "paul.gesel@picknik.ai"], "0.3.1-3": ["Tue Mar 21 2023", "Paul Gesel", "paul.gesel@picknik.ai"]}
