--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed2ee5b
-	base = 1e1ad5b
+	base = 6f1b1cf
 	trim = parameter_traits
-	trimbase = 
+	trimbase = 1e1ad5b
