--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed2ee5b
-	base = 83eed57
+	base = 1fd9e44
 	trim = generate_parameter_library
-	trimbase = 
+	trimbase = 83eed57
