--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed2ee5b
-	base = 211cd5b
+	base = 033dad6
 	trim = example
-	trimbase = 
+	trimbase = 211cd5b
