--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed2ee5b
-	base = f989413
+	base = 6c22fec
 	trim = generate_parameter_library_py
-	trimbase = 
+	trimbase = f989413
