--- a/example_python/package.xml
+++ b/example_python/package.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>generate_parameter_library_py</name>
+  <name>generate_parameter_module_example</name>
   <version>0.3.4</version>
-  <description>Python to generate ROS parameter library.</description>
-  <maintainer email="paul.gesel@picknik.ai">Paul Gesel</maintainer>
+  <description>Example usage of generate_parameter_library for a python module</description>
+  <maintainer email="paulgesel@gmail.com">paul</maintainer>
   <license>BSD-3-Clause</license>
-  <author email="paul.gesel@picknik.ai">Paul Gesel</author>
 
-  <depend>python3</depend>
-  <depend>python3-jinja2</depend>
-  <depend>python3-typeguard</depend>
-  <depend>python3-yaml</depend>
+  <depend>generate_parameter_library</depend>
+  <depend>rclpy</depend>
 
   <test_depend>ament_copyright</test_depend>
+  <test_depend>ament_flake8</test_depend>
+  <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
 
   <export>
