--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/generate_parameter_module_example
-	previous = 
-	base = bf5eaf6
+	previous = bf5eaf6
+	base = 1ccbc14
 	trim = 
 	trimbase = 
