--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/generate_parameter_module_example
-	previous = 
-	base = e36f84c
+	previous = e36f84c
+	base = 21acabf
 	trim = 
 	trimbase = 
