--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bf6fc86
-	base = 3d8493e
+	base = fa182f8
 	trim = generate_parameter_library_py
-	trimbase = 
+	trimbase = 3d8493e
