--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bf6fc86
-	base = f59063e
+	base = 0a3c4e4
 	trim = generate_parameter_library
-	trimbase = 
+	trimbase = f59063e
