--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bf6fc86
-	base = 53a5269
+	base = 9ee3c94
 	trim = parameter_traits
-	trimbase = 
+	trimbase = 53a5269
