--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bf6fc86
-	base = ba08599
+	base = 1398e36
 	trim = example
-	trimbase = 
+	trimbase = ba08599
