--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bf6fc86
-	base = 0673833
-	trim = 
-	trimbase = 
+	base = 1cf1e72
+	trim = example_python
+	trimbase = 0673833
