--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/generate_parameter_module_example
-	previous = 
-	base = 1cf1e72
+	previous = 1cf1e72
+	base = 23c64f7
 	trim = 
 	trimbase = 
