--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/generate_parameter_module_example
-	previous = 
-	base = a933e75
+	previous = a933e75
+	base = 20b388a
 	trim = 
 	trimbase = 
