--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/generate_parameter_module_example
-	previous = 
-	base = 5b3c1df
+	previous = 5b3c1df
+	base = da88346
 	trim = 
 	trimbase = 
