--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/generate_parameter_module_example
-	previous = 
-	base = c90249c
+	previous = c90249c
+	base = 7091652
 	trim = 
 	trimbase = 
