--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bf6fc86
-	base = c456c0b
+	base = 60a0fe4
 	trim = generate_parameter_library_py
-	trimbase = 
+	trimbase = c456c0b
