--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bf6fc86
-	base = 53c4784
+	base = d9c00c3
 	trim = generate_parameter_library
-	trimbase = 
+	trimbase = 53c4784
