--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bf6fc86
-	base = d5e4fc9
+	base = 8f92144
 	trim = example
-	trimbase = 
+	trimbase = d5e4fc9
