--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bf6fc86
-	base = f133712
+	base = 9988219
 	trim = parameter_traits
-	trimbase = 
+	trimbase = f133712
