--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bf6fc86
-	base = c28e71a
-	trim = 
-	trimbase = 
+	base = 19f06f4
+	trim = example_python
+	trimbase = c28e71a
