--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/iron/generate_parameter_module_example
-	previous = 
-	base = 19f06f4
+	previous = 19f06f4
+	base = f4b91d6
 	trim = 
 	trimbase = 
