--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/iron/generate_parameter_module_example
-	previous = 
-	base = c0a5d47
+	previous = c0a5d47
+	base = c51661d
 	trim = 
 	trimbase = 
