--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/iron/generate_parameter_module_example
-	previous = 
-	base = 5910966
+	previous = 5910966
+	base = d1eab41
 	trim = 
 	trimbase = 
